Before apply test
